[package]
name = "short"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.7"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["macros", "rt", "tokio-macros", "tracing"] }
tracing = { version = "0.1.37", features = ["async-await"] }
url = "2.4.0"
urlencoding = "2.1.3"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
